# stigcode

./: .containerignore  CLAUDE.md  Containerfile  LICENSE  README.md  RESEARCH.md  pyproject.toml
data/mappings/: asd_stig_v6r3.yaml  finding_classifications.yaml
docs/: architecture.md  deployment.md  getting-started.md  sarif-contract.md  sarif-integration-guide.md  stigcode-context-and-usage.md  user-guide.md
manifests/: deployment.yaml  job.yaml
scripts/: create_test_dirs.sh  extract_cci_mappings.py  fix_classification_vids.py  validate_mapping_db.py  verify_offline.py
src/stigcode/: __init__.py  cli.py
src/stigcode/cli/: __init__.py  ckl_command.py  commands.py  info.py  lookup.py  oscal_command.py  output_commands.py  pipeline.py  stig.py  trend.py  validate_command.py
src/stigcode/data/: __init__.py  registry.yaml
src/stigcode/data/cci/: cci_to_nist.yaml
src/stigcode/data/mappings/: finding_classifications.yaml
src/stigcode/ingest/: __init__.py  sarif.py  validate.py  xccdf.py
src/stigcode/mapping/: engine.py  status.py
src/stigcode/output/: __init__.py  ckl.py  ckl_update.py  coverage.py  oscal.py  pdf.py  poam.py  report.py  trend.py  xref.py
tests/: conftest.py  test_ckl.py  test_ckl_update.py  test_cli.py  test_coverage.py  test_mapping.py  test_mapping_integration.py  test_oscal.py  test_pdf.py  test_poam.py  test_registry.py  test_report.py  test_sarif.py  test_status.py  test_trend.py  test_validate.py  test_xccdf.py  test_xref.py
tests/fixtures/ckl/: existing_assessment.ckl
tests/fixtures/mappings/: test_mappings.yaml
tests/fixtures/sarif/: cwe_in_message.sarif  cwe_in_properties.sarif  cwe_in_relationships.sarif  cwe_in_tags.sarif  multi_run.sarif  trend_scan_1.sarif  trend_scan_2.sarif
