[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stigcode"
version = "0.0.1"
description = "SARIF-to-compliance bridge. Transforms SAST scan results into DISA STIG checklists, ATO evidence artifacts, and compliance-native output."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "rdwj"}
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
keywords = ["stig", "disa", "compliance", "sarif", "sast", "ato", "nist", "security", "ckl"]

[project.urls]
Homepage = "https://github.com/rdwj/stigcode"
Repository = "https://github.com/rdwj/stigcode"
Issues = "https://github.com/rdwj/stigcode/issues"

[project.scripts]
stigcode = "stigcode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
